ADS Integrator Brick v0.0.1

--- a/apps/ads_integrator_brick/Gemfile
+++ b/apps/ads_integrator_brick/Gemfile
@@ -5,4 +5,4 @@ gem 'gooddata'
 gem "gooddata-dss-jdbc",:platform => "jruby"
 gem "gooddata_connectors_base", :path => 'gooddata_connectors_base-s3'
 gem "gooddata_connectors_metadata", :path => "gooddata_connectors_metadata-bds_implementation"
-gem "gooddata_connectors_ads", :path => "gooddata_connectors_ads-master"
+gem "gooddata_connectors_ads", :path => "gooddata_connectors_ads-0.0.1"
