The brick ads_integration_devel is now referencing libraries on S3

--- a/apps/ads_integrator_brick/Gemfile
+++ b/apps/ads_integrator_brick/Gemfile
@@ -1,6 +1,7 @@
 source 'https://rubygems.org'
 
 gem 'ffi','1.9.3'
+gem 'terminal-table','1.4.5'
 gem 'gooddata'
 gem "gooddata-dss-jdbc",:platform => "jruby"
 gem "gooddata_connectors_base", :path => 'gooddata_connectors_base-s3'
