--- a/apps/csv_downloader_brick/Gemfile
+++ b/apps/csv_downloader_brick/Gemfile
@@ -2,6 +2,7 @@ source 'https://rubygems.org'
 
 
 gem 'ffi','1.9.3'
+gem 'terminal-table','1.4.5'
 gem 'gooddata'
 gem "gooddata_connectors_base", :path => 'gooddata_connectors_base-s3'
 gem "gooddata_connectors_metadata", :path => "gooddata_connectors_metadata-bds_implementation"
