--- a/apps/sql_downloader_brick/Gemfile
+++ b/apps/sql_downloader_brick/Gemfile
@@ -2,8 +2,9 @@ source 'https://rubygems.org'
 
 gem 'json','1.8.1'
 gem 'ffi','1.9.3'
+gem 'terminal-table','1.4.5'
 gem 'gooddata','0.6.12'
 gem 'rubyzip','1.1.6'
-gem "gooddata_connectors_base", :git => 'https://github.com/gooddata/gooddata_connectors_base.git', :branch => "s3"
-gem "gooddata_connectors_metadata", :git => "https://github.com/gooddata/gooddata_connectors_metadata", :branch => "bds_implementation"
-gem "gooddata_connectors_downloader_sql", :git => "https://github.com/adriantoman/gooddata_connectors_downloader_sql.git"
+gem "gooddata_connectors_base", :path => 'gooddata_connectors_base-s3'
+gem "gooddata_connectors_metadata", :path => "gooddata_connectors_metadata-bds_implementation"
+gem "gooddata_connectors_downloader_sql", :path => "gooddata_connectors_downloader_sql-master"
